force-app/main/default/objects/ffct__FeatureLimit__c/ffct__FeatureLimit__c.object-meta.xml
<CustomObject>
    <description>Used by the Pre Upgrade Package tool.</description>
    <label>Feature Limit</label>
    <nameField>
        <label>Feature Limit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feature Limits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>