force-app/main/default/objects/ffct__FeatureLimit__c/fields/ffct__Connection__c.field-meta.xml
<CustomField>
    <fullName>ffct__Connection__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Connection</label>
    <referenceTo>ffct__Connection__c</referenceTo>
    <relationshipLabel>Feature Limits</relationshipLabel>
    <relationshipName>FeatureLimits</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>