force-app/main/default/objects/ffct__FeatureLimit__c/fields/ffct__Limit__c.field-meta.xml
<CustomField>
    <fullName>ffct__Limit__c</fullName>
    <label>Limit</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>