force-app/main/default/objects/ffct__FeatureLimit__c/fields/ffct__RelatedTo__c.field-meta.xml
<CustomField>
    <fullName>ffct__RelatedTo__c</fullName>
    <label>Related To</label>
    <length>100</length>
    <type>Text</type>
</CustomField>